--- a/Hannibal/Resources/Storyboards/Main.storyboard
+++ b/Hannibal/Resources/Storyboards/Main.storyboard
@@ -14,10 +14,11 @@
                         <viewControllerLayoutGuide type="bottom" id="spJ-fx-XHD"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="NWY-jX-e4k">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GrU-vw-DqP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
