--- a/Hannibal/Resources/Storyboards/Main.storyboard
+++ b/Hannibal/Resources/Storyboards/Main.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Initial View Controller-->
         <scene sceneID="DSa-Wk-kYb">
             <objects>
-                <viewController id="Eph-X3-i9b" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="InitialViewController" id="Eph-X3-i9b" customClass="InitialViewController" customModule="Hannibal" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="rE0-1H-T3y"/>
                         <viewControllerLayoutGuide type="bottom" id="spJ-fx-XHD"/>
