--- a/Hannibal/Resources/Storyboards/Main.storyboard
+++ b/Hannibal/Resources/Storyboards/Main.storyboard
@@ -1,28 +1,65 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Eph-X3-i9b">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10115" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0RJ-8M-CAf">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10084"/>
     </dependencies>
     <scenes>
-        <!--Initial View Controller-->
-        <scene sceneID="DSa-Wk-kYb">
+        <!--Item 2-->
+        <scene sceneID="R6s-YU-pGA">
             <objects>
-                <viewController storyboardIdentifier="InitialViewController" id="Eph-X3-i9b" customClass="InitialViewController" customModule="Hannibal" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bkW-zo-f1c" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="rE0-1H-T3y"/>
-                        <viewControllerLayoutGuide type="bottom" id="spJ-fx-XHD"/>
+                        <viewControllerLayoutGuide type="top" id="6tA-Ba-TlO"/>
+                        <viewControllerLayoutGuide type="bottom" id="QG0-tp-BRd"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="NWY-jX-e4k">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <view key="view" contentMode="scaleToFill" id="4Po-3p-sXu">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="DIF-eJ-FoZ"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="GrU-vw-DqP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d2B-f9-qaF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="519" y="372"/>
+            <point key="canvasLocation" x="1183" y="267"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="SWx-Bx-fXd">
+            <objects>
+                <viewController id="Wrj-6y-RpM" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7y3-bp-Mox"/>
+                        <viewControllerLayoutGuide type="bottom" id="yNY-ix-0mp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="k7Q-FC-3JX">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="hsG-QB-3Wx"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cxW-hf-JDr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1183" y="-389"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="ck9-sf-sOe">
+            <objects>
+                <tabBarController id="0RJ-8M-CAf" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="BRq-3T-dF1">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Wrj-6y-RpM" kind="relationship" relationship="viewControllers" id="aZX-K4-hOF"/>
+                        <segue destination="bkW-zo-f1c" kind="relationship" relationship="viewControllers" id="6CE-Ar-Mca"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7JQ-wu-5au" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="367" y="-61"/>
         </scene>
     </scenes>
 </document>
